# python-package

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
src/Generic_Tree/generic_tree/: __init__.py
src/namespace/package/: cli.py  commands.py
src/python_package/: __init__.py  __main__.py
src/python_package/cli/: __init__.py  app.py  utils.py
src/python_package/cli/controllers/: base.py
src/python_package/utils/: version.py
