# Package declarative configuration
#
# This file specifies parameters used to configure setuptools packing process.
# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#metadata.


[metadata]
# A string specifying the name of the package
name = python-package

# A string specifying the version number of the package
version = 0.1.0

# A string describing the package in a single line
description = A straightforward beginning for an open-source python package project repository

# A string providing a longer description of the package
long_description = file: README.md

# A string specifying the content type is used for the long_description
long_description_content_type = text/markdown

# A string specifying the author of the package
author = Arthur Henrique

# A string specifying the email address of the package author
author_email = Arthur Henrique <Arthur.Henrique.Della.Fraga@gmail.com>

# A string specifying the license of the package
license = GNU GPLv3

# A string specifying the URL for the package homepage
url = https://github.com/generic-tree/python-package

# An arbitrary map of URL names to hyperlinks,
# allowing more extensible documentation of where various resources can be found
;project_urls=
;    Documentation =
;    Source =
;    Tracker =


# A list of strings describing the categories for the package.
# See https://pypi.org/classifiers/
classifiers =
    # Declare how mature is this project
    Development Status :: 1 - Planning

    # Pick your license as you wish (should match "license" above)
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    # Indicate who your project is intended for
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
    Topic :: Utilities


[options]
# A string corresponding to a version specifier (as defined in PEP 440) for the Python version
python_requires = >=3.6

# A string or list of strings specifying what other distributions need to be installed when this one is
;install_requires =


# A list of strings specifying the standalone script files to be built and installed
;scripts =


# A dictionary mapping entry point group names to strings or lists of strings defining the entry points
# Entry points are used to support dynamic discovery of services or plugins provided by a project
;entry_points = file: src/entry_points


# A list of strings specifying the packages that setuptools will manipulate
#
#   `find:` takes a source directory and two lists of package name patterns to exclude and include,
#           and then return a list of str representing the packages it could find
#   `find_namespace:` behaves similarly to `find:` but works with namespace package
#
# See https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#namespace-packages
packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src
